crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__query_tests__native_queries__select_artist.snap
---
source: crates/tests/databases-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "AC/DC"
      },
      {
        "Name": "Accept"
      },
      {
        "Name": "Aerosmith"
      },
      {
        "Name": "Alanis Morissette"
      },
      {
        "Name": "Alice In Chains"
      }
    ]
  }
]
